--- a/main.ipynb
+++ b/main.ipynb
@@ -30,7 +30,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dinopc\\Anaconda3\\envs\\venv\\lib\\site-packages\\gensim\\utils.py:1212: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "C:\\Users\\55519\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
       "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
      ]
     }
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dinopc\\Anaconda3\\envs\\venv\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning: Call to deprecated `syn0` (Attribute will be removed in 4.0.0, use self.wv.vectors instead).\n",
+      "C:\\Users\\55519\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning: Call to deprecated `syn0` (Attribute will be removed in 4.0.0, use self.wv.vectors instead).\n",
       "  This is separate from the ipykernel package so we can avoid doing imports until\n"
      ]
     },
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3min 26s\n"
+      "Wall time: 7min 59s\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,9 +366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Model, Sequential\n",
     "from keras.layers import TimeDistributed,Conv1D,Dense,Embedding,Input,Dropout,LSTM,Bidirectional,MaxPooling1D,Flatten,concatenate,Concatenate\n",
@@ -448,7 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Considerate Classes: {'LOCATION', 'MEASURE', 'OTHER', 'ORGANIZATION', 'TIME', 'DEFINITION', 'PERSON'}\n"
+      "Considerate Classes: {'DEFINITION', 'ORGANIZATION', 'PERSON', 'MEASURE', 'TIME', 'OTHER', 'LOCATION'}\n"
      ]
     }
    ],
@@ -602,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +621,8 @@
       "(3464, 12, 1000)\n",
       "(3464, 12, 300)\n",
       "(3464, 12, 1300)\n",
-      "(3464, 12, 1300)\n"
+      "(3464, 12, 1300)\n",
+      "(3464,)\n"
      ]
     }
    ],
@@ -622,7 +631,8 @@
     "print(chave_X_tfidf.shape)\n",
     "print(chave_X_w2v.shape)\n",
     "print(chave_X_hybrid.shape)\n",
-    "print(chave_X_hybrid2.shape)"
+    "print(chave_X_hybrid2.shape)\n",
+    "print(np.array(chave_X).shape)"
    ]
   },
   {
@@ -634,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,14 +679,14 @@
     "    #{'name': 'NBBL W2V', 'model': nbbl_w2v_model(pt_model_w2v)},\n",
     "    #{'name': 'NBBL Hybrid', 'model': nbbl_hybrid_model(pt_model_w2v)},\n",
     "    #{'name': 'NBBL Hybrid2', 'model': nbbl_hybrid2_model(pt_model_w2v)},\n",
-    "    {'name': 'MLP BoW', 'model': mlp_bow_model()},\n",
+    "    #{'name': 'MLP BoW', 'model': mlp_bow_model()},\n",
     "    #{'name': 'MLP TFIDF', 'model': mlp_tfidf_model()},\n",
     "    #{'name': 'MLP W2V', 'model': mlp_w2v_model()},\n",
     "    #{'name': 'MLP Hybrid', 'model': mlp_hybrid_model()},\n",
     "    #{'name': 'MLP Hybrid B', 'model': mlp_hybrid2_model()},\n",
     "    #{'name': 'LSTM BoW', 'model': lstm_bow_model()},\n",
     "    #{'name': 'LSTM TFIDF', 'model': lstm_bow_model()},\n",
-    "    #{'name': 'LSTM W2V', 'model': lstm_w2v_model()},\n",
+    "    {'name': 'LSTM W2V', 'model': lstm_w2v_model()},\n",
     "    #{'name': 'LSTM Hybrid', 'model': lstm_hybrid_model()},\n",
     "    #{'name': 'LSTM Hybrid2', 'model': lstm_hybrid_model()},\n",
     "    #{'name': 'SVM BoW', 'model': svm_bow_model()},\n",
@@ -689,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +708,7 @@
        "(3464, 7)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,13 +719,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train: 1000 Test: 2464:   LSTM W2V .anomalias 0\n",
+      ".anomalias 0\n",
+      "\n",
+      "Train: 2000 Test: 1464:   LSTM W2V .anomalias 0\n",
+      ".anomalias 0\n",
+      "\n",
+      "Train: 3000 Test: 464:   LSTM W2V .anomalias 0\n",
+      ".anomalias 0\n",
+      "\n",
+      "Run time benchmark: 143.99493646621704\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = run_benchmark(models, chave_X, chave_y, k=2, n=1000, to_ok_=1, lstm_=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results = run_benchmark(models, chave_X, chave_y, k=2, n=1000, to_ok_=2)"
+    "results.to_csv('teste.csv')"
    ]
   },
   {
@@ -927,13 +964,7 @@
       "Train: 1160 Test: 2304:   LSTM W2V .....\n",
       "Train: 1200 Test: 2264:   LSTM W2V .....\n",
       "Train: 1240 Test: 2224:   LSTM W2V .....\n",
-      "Train: 1280 Test: 2184:   LSTM W2V .....\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Train: 1280 Test: 2184:   LSTM W2V .....\n",
       "Train: 1320 Test: 2144:   LSTM W2V .....\n",
       "Train: 1360 Test: 2104:   LSTM W2V .....\n",
       "Train: 1400 Test: 2064:   LSTM W2V .....\n",
@@ -1029,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,6 +1133,12 @@
     "                x_test = X[test_indexs]\n",
     "                y_test = y[test_indexs]\n",
     "                \n",
+    "                # ToDo - Remove it\n",
+    "                anomalias = 0;\n",
+    "                for i_train in train_indexs:\n",
+    "                    if i_train in test_indexs:\n",
+    "                        anomalias += 1;\n",
+    "                print('anomalias', anomalias)\n",
     "                \n",
     "                if lstm_:\n",
     "                    start_time = time.time()\n",
@@ -1348,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2020,9 +2057,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'table' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-6a5f5e418335>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtable\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Model'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mlbs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'f1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'table' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import scipy\n",
     "\n",
@@ -2035,15 +2084,22 @@
     "    if t['Model'] == lbs[3]:\n",
     "        b.append(t['f1'])\n",
     "\n",
-    "scipy.stats.ttest_ind(a, b)"
+    "scipy.stats.scipy.stats.wilcoxon(a, b)(a, b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2055,7 +2111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
